# agentic-codebase-to-scientific-report

./: .gitignore  .gitmessage  .markdownlint-cli2.jsonc  .markdownlint.jsonc  AGENTS.md  AGENT_LEARNINGS.md  AGENT_REQUESTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  example_prompt.md  lychee.toml  mkdocs.yaml  pyproject.toml
.claude/agents/: asset-processor.md  bibliography-curator.md  orchestrator.md  repo-analyzer.md  section-synthesizer.md  validator.md
.claude/agents/TODO/: asset-processor.md  bibliography-curator.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yaml  codeql.yaml  lint-md-links.yml
config/: README.md  comments_analysis.md  comments_synthesis.md  sources.md  targets.md
docs/: UserStory.md  architecture.md  index.md  roadmap.md
docs/howtos/: running-the-pipeline.md
docs/plans/: drop-mkdocs.md  first-end-to-end-run.md
examples/Agents-eval/: single_prompt.md
schema/: analysis.schema.json
scripts/test/: check-spec-paths.sh  validate-schema.sh
scripts/writeup/: README.md  generate-plantuml-png.sh  run-pandoc.sh  setup-pdf-converter.sh
scripts/writeup/citation-styles/: ieee.csl
tests/fixtures/invalid/: bad-confidence-enum.yaml  bad-date-format.yaml  bare-asset-path.yaml  citation-missing-used-in-sections.yaml  missing-project-summary.yaml  wrong-schema-version.yaml
tests/fixtures/valid/: minimal.yaml  representative.yaml
